Explicit CORS config for preflight